--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -2,8 +2,9 @@ name: 02-workflow-events
 on:
     workflow_dispatch:
 jobs:
+  trigger-workflows:
     name: trigger workflows
     runs-on: ubuntu-latest
     steps:
-        - name: Trigger manually
-          run: echo "This workflow was triggered ${{ github.event_name }}!"
+      - name: Trigger manually
+        run: echo "This workflow was triggered ${{ github.event_name }}!"
